@@ -180,4 +180,6 @@ ALTER TABLE llx_commande CHANGE COLUMN tva total_tva double(24,8) default 0;
 ALTER TABLE llx_supplier_proposal CHANGE COLUMN tva total_tva double(24,8) default 0;
 ALTER TABLE llx_supplier_proposal CHANGE COLUMN total total_ttc double(24,8) default 0;
 ALTER TABLE llx_propal CHANGE COLUMN tva total_tva double(24,8) default 0;
+ALTER TABLE llx_facture CHANGE COLUMN tva total_tva double(24,8) default 0;
+ALTER TABLE llx_facture CHANGE COLUMN total total_ht double(24,8) default 0;
 
